Fix CORS to read from environment variable